Fixing event new, edit, show cropper and preview image sizes

--- a/src/client/styles/forms.less
+++ b/src/client/styles/forms.less
@@ -21,11 +21,13 @@ input.photo {
 .preview-image {
   width: 100%;
   height: 100%;
+  max-width: 485px;
+  max-height: 350px;
 }
 
 .cropper-image {
   width: 100%;
-  max-height: 500px;
+  max-height: 350px;
 }
 
 // Media queries
